--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <script type='module' src='./scripts/main.js'></script>
 </head>
 <body>
+    <h1 style="background-color: lightblue;">TV Series</h1>
+    
+    <div class="container-fluid"></div>
+        <div class="row">
+            <div class="col-md-6" id="centrado">
+                <table class="table table-striped" id="series">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Id</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Plataforma</th>
+                            <th scope="col">Temporadas</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
