--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Taller TypeScript 1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='icon' href='data:,'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="estilos.css">
     <script type='module' src='./scripts/main.js'></script>
 </head>
 <body>
-    <h1 style="background-color: lightblue;">TV Series</h1>
+    <h1>TV Series</h1>
     
     <div class="container-fluid"></div>
         <div class="row">
             <div class="col-md-6" id="centrado">
                 <table class="table table-striped" id="series">
-                    <thead class="thead-dark">
+                    <thead class="thead-dark" style="background-color: aliceblue;">
                         <tr>
                             <th scope="col">Id</th>
                             <th scope="col">Nombre</th>
