--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='icon' href='data:,'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="style.css">
     <script type='module' src='./scripts/main.js'></script>
 </head>
-<body>
-    <h1>TV Series</h1>
+<body class = "body">
+    <h1 class="head1">TV Series</h1>
     
     <div class="container-fluid"></div>
         <div class="row">
-            <div class="col-md-6" id="centrado">
+            <div class="col-md-6" id="centered">
                 <table class="table table-striped" id="series">
-                    <thead class="thead-dark" style="background-color: aliceblue;">
+                    <thead class="thead-dark">
                         <tr>
                             <th scope="col">Id</th>
                             <th scope="col">Nombre</th>
