--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script type='module' src='./scripts/main.js'></script>
 </head>
 <body class = "body">
-    <h1 class="head1">TV Series</h1>
     
-    <div class="container-fluid"></div>
-        <div class="row">
-            <div class="col-md-6" id="centered">
+    <h1 class="head1"><b>TV Series</b></h1>
+    <br>
+    <div class="container-fluid">
+        <div class="row ml-5 mr-5">
                 <table class="table table-striped" id="series">
                     <thead class="thead-dark">
                         <tr>
@@ -28,7 +28,6 @@
                     <tbody>
                     </tbody>
                 </table>
-            </div>
         </div>
     </div>
     
